--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "numberlab"
 version = "0.1.0"
 edition = "2021"
 authors = ["indrajit"]
-description = "A Rust library for generating series of numbers"
+description = "A collection of number theory algorithms"
 documentation = "https://docs.rs/numberlab"
 readme = "README.md"
 homepage = "https://eendroroy.github.io/numberlab"
