--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,3 +26,7 @@ criterion = { version = "0.5.1", features = ["html_reports"] }
 [[bench]]
 name = "factorization"
 harness = false
+
+[[bench]]
+name = "factorial"
+harness = false
