--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,9 @@ edition = "2021"
 crate-type = ["lib"]
 #crate-type = ["staticlib", "lib", "cdylib"]
 
+[dependencies]
+num = "=0.4.3"
+
 [dev-dependencies]
 criterion = { version = "0.5.1", features = ["html_reports"] }
 
