add path hilighting option in MatrixVis

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ crate-type = ["lib"]
 #crate-type = ["staticlib", "lib", "cdylib"]
 
 [dependencies]
+colored = "2.0.2"
 num = "=0.4.3"
 
 [dev-dependencies]
