--- a/.github/workflows/numberlab.yml
+++ b/.github/workflows/numberlab.yml
@@ -1,10 +1,7 @@
 name: Tests
 
 on:
-  push:
-    branches: [ "master", "development" ]
-  pull_request:
-    branches: [ "master" ]
+  workflow_dispatch:
 
 env:
   CARGO_TERM_COLOR: always
